// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form/Button Default smoke-test 1`] = `
<div class="gi-p-4 false">
  <button class="gi-btn gi-btn-primary gi-btn-regular undefined">
    Button
  </button>
</div>
`;

exports[`Form/Button Disabled smoke-test 1`] = `
<div class="gi-p-4 false">
  <button class="gi-btn undefined gi-btn-regular gi-btn-primary-disabled">
    Button
  </button>
</div>
`;

exports[`Form/Button WithIcon smoke-test 1`] = `
<div class="gi-p-4 false">
  <button class="gi-btn gi-btn-primary gi-btn-regular undefined">
    <span role="presentation"
          class=" material-icons  gi-block 24px"
          style="font-size: 24px;"
    >
      thumb_up
    </span>
    Button
  </button>
</div>
`;

exports[`Form/Button WithIconRight smoke-test 1`] = `
<div class="gi-p-4 false">
  <button class="gi-btn gi-btn-primary gi-btn-regular undefined">
    Button
    <span role="presentation"
          class=" material-icons  gi-block 24px"
          style="font-size: 24px;"
    >
      thumb_up
    </span>
  </button>
</div>
`;
